--- a/styles/style.css
+++ b/styles/style.css
@@ -2,16 +2,74 @@
     font-family: Titilium;
     src: local("Titilium"),
     url("../assets/fonts/Titillium_Web/TitilliumWeb-Light.ttf");
+    font-family: Gillrow;
+    src: local("Gillrow"),
+    url("../assets/fonts/Gillrow/Gilroy-Black.eot");
 }
 
 .page{
     background: linear-gradient(179.6deg, #000000 -14.47%, rgba(0, 0, 0, 0) 309.69%),
     linear-gradient(0.7deg, #0D0D0D 3.57%, rgba(0, 0, 0, 0) 36.73%),
     linear-gradient(0deg, #D9D9D9, #D9D9D9);
-    min-height: 1010px;
+    max-height: 1010px;
+    max-width: 1565px;
 }
 
 .page__block {
     background:url("../assets/img/Rectangle\ 83.png")  no-repeat;
     min-height: 990px;
+    
+}
+.header {
+    position: absolute; 
+    width: 1260px;
+    height: 73px;
+    top: 38px;
+    left: 126px;
+    border-radius: 60px;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(0.5px);
+    border: 2px solid;
+    border-image-source: linear-gradient(98.24deg, #6DDCFF 0%, #7F60F9 100%);
+    box-shadow: 0px 1px 1px 1px grey;
+}
+
+.header__main {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.header__main-image {
+    background: url("../assets/img/Mask\ group.png");
+    width: 128.49px;
+    height: 73px;
+    top: 38px;
+    left: 157px;
+}
+
+.header__main-links {
+    display: flex;
+    justify-content: space-around;
+    margin: 30px 1px 1px 1px;
+    gap: 20px;
+    color:#FFFFFF;
+    font-family: Gilroy;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: left;
+}
+
+.header__main-contacts {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    margin: 30px 1px 1px 1px;
+    font-family: Gillrow;
+    color: #FFFFFF;
 }
